<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2HQ-GW-xJw">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Second View Controller-->
        <scene sceneID="FnC-fN-mJQ">
            <objects>
                <viewController id="2HQ-GW-xJw" customClass="SecondViewController" customModule="WalkthroughApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="N60-6M-3dL">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_lock" translatesAutoresizingMaskIntoConstraints="NO" id="i4b-X8-kR6">
                                <rect key="frame" x="0.0" y="228" width="414" height="160"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="160" id="OtV-By-d9X"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="安心のパスワードロック" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsk-2d-UC4">
                                <rect key="frame" x="16" y="412" width="382" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="secondLabel"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Lu-LB-vzp">
                                <rect key="frame" x="16" y="457" width="382" height="50.5"/>
                                <string key="text">個人情報にアクセスする際には パスワードが必要になるので、
第三者に情報が漏洩する心配はありません。</string>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUs-oU-2a2">
                                <rect key="frame" x="40" y="808" width="31" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <state key="normal" title="戻る">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="tapBackButton:" destination="2HQ-GW-xJw" eventType="touchUpInside" id="V7b-PF-rcf"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cH-1n-I9J">
                                <rect key="frame" x="343" y="808" width="31" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="nextButton"/>
                                <state key="normal" title="次へ">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="tapNextButton:" destination="2HQ-GW-xJw" eventType="touchUpInside" id="3gH-4X-Oi6"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="trailing" secondItem="1cH-1n-I9J" secondAttribute="trailing" constant="40" id="4Rb-5V-KWn"/>
                            <constraint firstItem="4Lu-LB-vzp" firstAttribute="top" secondItem="xsk-2d-UC4" secondAttribute="bottom" constant="24" id="FMd-Bi-Tf6"/>
                            <constraint firstItem="i4b-X8-kR6" firstAttribute="leading" secondItem="Y8p-82-8T1" secondAttribute="leading" id="HK0-AH-EUk"/>
                            <constraint firstItem="xsk-2d-UC4" firstAttribute="top" secondItem="i4b-X8-kR6" secondAttribute="bottom" constant="24" id="Iv8-uu-Ih9"/>
                            <constraint firstItem="i4b-X8-kR6" firstAttribute="centerY" secondItem="N60-6M-3dL" secondAttribute="centerY" constant="-140" id="New-2L-qgT"/>
                            <constraint firstItem="4Lu-LB-vzp" firstAttribute="leading" secondItem="Y8p-82-8T1" secondAttribute="leading" constant="16" id="XQO-ud-zhK"/>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="bottom" secondItem="1cH-1n-I9J" secondAttribute="bottom" constant="24" id="Xlh-UO-X3g"/>
                            <constraint firstItem="xsk-2d-UC4" firstAttribute="leading" secondItem="Y8p-82-8T1" secondAttribute="leading" constant="16" id="cl7-XV-Cvc"/>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="bottom" secondItem="vUs-oU-2a2" secondAttribute="bottom" constant="24" id="fGl-tc-TKa"/>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="trailing" secondItem="xsk-2d-UC4" secondAttribute="trailing" constant="16" id="fNL-sX-jFv"/>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="trailing" secondItem="4Lu-LB-vzp" secondAttribute="trailing" constant="16" id="jfa-Fp-lPF"/>
                            <constraint firstItem="vUs-oU-2a2" firstAttribute="leading" secondItem="Y8p-82-8T1" secondAttribute="leading" constant="40" id="pot-zp-7KT"/>
                            <constraint firstItem="Y8p-82-8T1" firstAttribute="trailing" secondItem="i4b-X8-kR6" secondAttribute="trailing" id="vAe-Bz-wyU"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Y8p-82-8T1"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="t3u-v0-cCg" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="406" y="-261"/>
        </scene>
    </scenes>
    <resources>
        <image name="ic_lock" width="512" height="512"/>
    </resources>
</document>
